--- a/css/COMPILED-PAGES/about.css
+++ b/css/COMPILED-PAGES/about.css
@@ -8444,15 +8444,26 @@ body {
     width: 0px !important; } }
 .about-container {
   padding: 2rem; }
+  .about-container .about-main {
+    display: flex; }
+    @media only screen and (max-width: 650px) {
+      .about-container .about-main {
+        display: block; } }
   .about-container .left-about {
     padding: 0.5rem;
     position: relative;
     width: calc(280px + 1rem); }
+    @media only screen and (max-width: 650px) {
+      .about-container .left-about {
+        width: 100%; } }
     .about-container .left-about .left-img .img {
       width: 280px;
       height: 250px;
       border-radius: 50%;
       position: relative; }
+      @media only screen and (max-width: 650px) {
+        .about-container .left-about .left-img .img {
+          width: 100%; } }
       .about-container .left-about .left-img .img img {
         width: 225px;
         height: 225px;
@@ -8538,6 +8549,9 @@ body {
         margin: 0 1rem;
         padding: 1rem 0rem 0.25rem 0rem;
         border-bottom: 1px solid #000; }
+        @media only screen and (max-width: 650px) {
+          .about-container .left-about .left-content h3 {
+            font-weight: bold; } }
       .about-container .left-about .left-content p {
         margin: 0;
         padding: 0 1rem;
@@ -8551,6 +8565,9 @@ body {
     background-color: #fff;
     margin-top: 133px;
     padding: 1rem; }
+    @media only screen and (max-width: 650px) {
+      .about-container .right-about {
+        margin: 0.5rem; } }
     .about-container .right-about h2 {
       margin-top: 1rem;
       padding: 0.25rem 0;
