--- a/css/sass/pages/_about.scss
+++ b/css/sass/pages/_about.scss
@@ -1,16 +1,27 @@
 .about-container {
   padding: 2rem;
+  .about-main {
+    display: flex;
+    @media only screen and (max-width: 650px) {
+      display: block;
+    }
+  }
   .left-about {
     padding: 0.5rem;
     position: relative;
     width: calc(280px + 1rem);
+    @media only screen and (max-width: 650px) {
+      width: 100%;
+    }
     .left-img {
       .img {
         width: 280px;
         height: 250px;
         border-radius: 50%;
         position: relative;
-
+        @media only screen and (max-width: 650px) {
+          width: 100%;
+        }
         img {
           width: 225px;
           height: 225px;
@@ -109,6 +120,9 @@
         margin: 0 1rem;
         padding: 1rem 0rem 0.25rem 0rem;
         border-bottom: 1px solid #000;
+        @media only screen and (max-width: 650px) {
+          font-weight: bold;
+        }
       }
       p {
         margin: 0;
@@ -128,6 +142,9 @@
     background-color: #fff;
     margin-top: 133px;
     padding: 1rem;
+    @media only screen and (max-width: 650px) {
+      margin: 0.5rem;
+    }
     h2 {
       margin-top: 1rem;
       padding: 0.25rem 0;
