--- a/css/sass/style.css
+++ b/css/sass/style.css
@@ -252,6 +252,33 @@ h4 {
 h5 {
   font-size: 0.75rem; }
 
+.loader-container {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  background-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+.loader {
+  width: 50px;
+  height: 50px;
+  border: 5px solid;
+  border-radius: 50%;
+  color: #3498db;
+  border-top-color: transparent;
+  animation: loader 1.2s linear infinite; }
+
+@keyframes loader {
+  25% {
+    color: #2eec71; }
+  50% {
+    color: #f1c40f; }
+  75% {
+    color: #e74c3c; }
+  to {
+    transform: rotate(360deg); } }
 .logo {
   position: relative;
   cursor: pointer; }
