--- a/css/COMPILED-PAGES/about.css
+++ b/css/COMPILED-PAGES/about.css
@@ -8165,10 +8165,12 @@ h5 {
   position: fixed;
   width: 100%;
   height: 100vh;
-  background-color: black;
+  z-index: 9999999;
+  background: linear-gradient(to right, #252525, #434343);
   display: flex;
   align-items: center;
-  justify-content: center; }
+  justify-content: center;
+  overflow: hidden; }
 
 .loader {
   width: 50px;
