--- a/css/sass/components/_tags.scss
+++ b/css/sass/components/_tags.scss
@@ -69,11 +69,12 @@ h5 {
   position: fixed;
   width: 100%;
   height: 100vh;
-  //z-index: 9999999;
-  background-color: black;
+  z-index: 9999999;
+  background: linear-gradient(to right, #252525, #434343);
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 .loader {
   width: 50px;
